# code-practice

./: .gitignore  CMakeLists.txt  README.md
LeetCode/Algorithms/: 117. Populating Next Right Pointers in Each Node II.cpp  124. Binary Tree Maximum Path Sum.cpp  127.Word Ladder.py  132. Palindrome Partitioning II.cpp  135. Candy.cpp  149. Max Points on a Line.cpp  150. Evaluate Reverse Polish Notation.py  152. Maximum Product Subarray.py  164. Maximum Gap.cpp  179. Largest Number.cpp  210. Course Schedule II.py  218. The Skyline Problem.cpp  220. Contains Duplicate III.cpp  221. Maximal Square.py  224.Basic Calculator.py  227. Basic Calculator II.py  23. Merge k Sorted Lists.cpp  25. Reverse Nodes in k-Group.cpp  282. Expression Add Operators.cpp  301. Remove Invalid Parentheses.cpp  304. Range Sum Query 2D.py  315. Count of Smaller Numbers After Self.cpp  316. Remove Duplicate Letters.py  324. Wiggle Sort II.py  329. Longest Increasing Path in a Matrix.cpp  330. Patching Array.py  332. Reconstruct Itinerary.py  335.Self Crossing.cpp  338. Counting Bits.cpp  347. Top K Frequent Elements.cpp  349. Intersection of Two Arrays.cpp  354. Russian Doll Envelopes.cpp  37. Sudoku Solver.cpp  372. Super Pow.cpp  374. Guess Number Higher or Lower.cpp  393. UTF-8 Validation.cpp  396. Rotate Function.cpp  399. Evaluate Division.cpp  407. Trapping Rain Water II.cpp  42. Trapping Rain Water.cpp  (+144 more)
LeetCode/String/: Median of Two Sorted Arrays .cpp
modern-c++/: Observer.cpp  Observer.h  bridge.h  composite.h  creator.cpp  factory.cpp  flyweight.h  interpreter.h  iterator.h  mediator.h  memento.h  mix2_main.cpp  mix_main.cpp  singleton.cpp  singleton.h  state.h  strategy.h  util.h
modern-c++/Singleton/: Forward.h
modern-c++/adapter/: Adapter.h  adapter_main.cpp
modern-c++/builder/: CompositeBuilder.h  FluentBuilder.h  GroovyStyleBuilder.h  builder.cpp  person.cpp
modern-c++/chain/: broker_chain.h  chain_main.cpp  pointer_chain.h
modern-c++/command/: command.h  command_main.cpp
modern-c++/decorator/: decorator_main.cpp  dynamic.h  functional_decorator.h  static_decorator.h
modern-c++/factory/: AbstractFactory.h  FuncionalFactory.h  InnerFactory.h  factory_main.cpp
modern-c++/observer/: observer_main.cpp  observer_signal.h  observer_template.cpp  observer_template.h
modern-c++/proxy/: property.h  proxy_main.cpp  virtual.h
modern-c++/singleton/: singleton_main.cpp
modern-c++/visitor/: classic_visitor.cpp  classic_visitor.h  reflective_visitor.h  std_visit.h  visitor_acyclic.h  visitor_main.cpp
