cmake_minimum_required(VERSION 3.19)
SET(CMAKE_C_COMPILER /usr/bin/gcc)
SET(CMAKE_CXX_COMPILER /usr/bin/gcc)
project(test)

set(CMAKE_CXX_STANDARD 20)
include_directories("modern-c++/*/*.h modern-c++/*.h")
include_directories(/usr/local/Cellar/boost/1.76.0/include/)
link_directories(/usr/local/Cellar/boost/1.76.0/lib/)
add_executable(creator modern-c++/creator.cpp modern-c++/util.h)
add_executable(builder modern-c++/builder/builder.cpp modern-c++/util.h modern-c++/builder/FluentBuilder.h modern-c++/builder/GroovyStyleBuilder.h modern-c++/builder/CompositeBuilder.h modern-c++/builder/person.cpp)
add_executable(factory modern-c++/factory/factory_main.cpp modern-c++/factory/InnerFactory.h modern-c++/util.h modern-c++/factory/AbstractFactory.h modern-c++/factory/FuncionalFactory.h)
add_executable(singleton modern-c++/singleton/singleton_main.cpp modern-c++/util.h modern-c++/singleton/Forward.h)
add_executable(adapter modern-c++/adapter/adapter_main.cpp modern-c++/adapter/Adapter.h)
add_executable(mix modern-c++/mix_main.cpp modern-c++/bridge.h modern-c++/composite.h modern-c++/flyweight.h modern-c++/interpreter.h modern-c++/iterator.h)
add_executable(decorator modern-c++/decorator/dynamic.h modern-c++/decorator/decorator_main.cpp modern-c++/decorator/static_decorator.h modern-c++/decorator/functional_decorator.h)
add_executable(proxy modern-c++/proxy/proxy_main.cpp modern-c++/proxy/property.h modern-c++/proxy/virtual.h)
add_executable(chain modern-c++/chain/chain_main.cpp)
add_executable(command modern-c++/command/command.h modern-c++/command/command_main.cpp)